[project]
name = "sushy-incus-driver"
version = "0.1.0"
description = "Out-of-tree Incus backend for sushy-emulator"
authors = [{ name = "Christian Tardif" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/tardich/sushy-incus-driver"