[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sushy-incus-driver"
version = "0.1.4"
description = "Out-of-tree Incus backend for sushy-emulator"
authors = [{ name = "Christian Tardif" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/tardich/sushy-incus-driver"
